# phorg

./: Cargo.toml  Makefile  README.md
.github/workflows/: check.yml  scheduled.yml  test.yml
src/: exiftool.rs  files.rs  hash.rs  lib.rs  main.rs  opt.rs  photos.rs
tests/: integration.rs
tests/data/src/: make
