[package]
name = "phorg"
version = "0.7.0"
description = "Photo files organizer"
repository = "https://github.com/xandkar/phorg"
keywords = ["photo", "organizer", "exif"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
infer = "0.16.0"
kamadak-exif = "0.5.5"
md-5 = "0.10.6"
nom-exif = "1.2.0"
rayon = "1.10.0"
sha2 = "0.10.8"
thiserror = "1.0.61"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
