[package]
name = "phorg"
version = "0.17.11"
description = "Idempotent photo/video file organizer"
repository = "https://github.com/xandkar/phorg"
authors = ["Siraaj Khandkar <siraaj@khandkar.net>"]
keywords = ["photo", "organizer", "exif"]
categories = ["command-line-utilities"]
license-file = "LICENSE"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
crc32fast = "1.4.2"
human-panic = "2.0.1"
indicatif = "0.17.8"
infer = "0.16.0"
kamadak-exif = "0.6.1"
md-5 = "0.10.6"
nom-exif = "2.2.1"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
